# avix

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
application/users/: __init__.py  users.py
bot/middlewares/: db.py
bot/routers/: __init__.py  start.py
core/config/: config.py
core/enums/: __init__.py  status.py
core/logs/: start_log.py
infrastructure/: __init__.py
infrastructure/database/: __init__.py  session.py
infrastructure/database/models/: user.py
infrastructure/database/repositories/: user.py
scripts/: start.sh  wait-for-services.py
tests/: conftest.py
tests/unit/: test_use_cases.py
